force-app/main/default/objects/Construction_Milestone__c/Construction_Milestone__c.object-meta.xml
<CustomObject>
    <description>Construction milestone for tracking project progress</description>
    <label>Construction Milestone</label>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Construction Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Construction Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>