force-app/main/default/objects/Construction_Milestone__c/fields/Actual_Completion__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion__c</fullName>
    <label>Actual Completion Date</label>
    <type>Date</type>
</CustomField>