force-app/main/default/objects/Construction_Milestone__c/fields/Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start__c</fullName>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>