force-app/main/default/objects/Construction_Milestone__c/fields/Delay_Days__c.field-meta.xml
<CustomField>
    <fullName>Delay_Days__c</fullName>
    <description>Actual vs Planned completion difference</description>
    <formula>IF(AND(NOT(ISBLANK(Actual_Completion__c)), NOT(ISBLANK(Planned_Completion__c))), Actual_Completion__c - Planned_Completion__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>