force-app/main/default/objects/Construction_Milestone__c/fields/Planned_Completion__c.field-meta.xml
<CustomField>
    <fullName>Planned_Completion__c</fullName>
    <label>Planned Completion Date</label>
    <type>Date</type>
</CustomField>