force-app/main/default/objects/Construction_Milestone__c/fields/Planned_Start__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start__c</fullName>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>