force-app/main/default/objects/Construction_Milestone__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Construction Milestones</relationshipLabel>
    <relationshipName>Construction_Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>